# Atomic-Lang-model

./: .dockerignore  ACHIEVEMENTS.md  Dockerfile  GRPO_TESTING_GUIDE.md  Gemfile  IMPLEMENTATION_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  _config.yml  about.md  index.md  quick_test.py  setup_grpo.py
.claude/: config.json
_posts/: 2025-07-26-atomic-language-model-tiny-verified-leap.md
atomic-lang-model/: Cargo.toml  QUICKSTART.md  REPORT.md  spec.md
atomic-lang-model/Coq/: Minimalist.v
atomic-lang-model/bench/: agreement_suite.rs  colorless_green.rs  mod.rs
atomic-lang-model/examples/: language_model_demo.py  quick_example.py
atomic-lang-model/experiments/fibration-bridge/: README.md  base_category.py  fibration_core.py  theory.md
atomic-lang-model/experiments/fibration-bridge/docs/: fibre_contracts.md
atomic-lang-model/experiments/fibration-bridge/examples/: integrated_demo.py  retrieval_demo.py
atomic-lang-model/experiments/fibration-bridge/fibres/: __init__.py  bm25_fibre.py  embedding_fibre.py  probability_fibre.py  proof_fibre.py
atomic-lang-model/experiments/fibration-bridge/tests/: __init__.py  test_bm25_fibre.py  test_smoke_fibration.py  test_stress_bm25.py
atomic-lang-model/python/: api_server.py  evaluation_framework.py  grpo_trainer.py  hybrid_model.py  logic_env.py  test_grpo_integration.py  test_validation.py  tiny_lm.py
atomic-lang-model/src/: lib.rs
atomic-lang-model/tests/: recursion.rs  test_language_model.py
docs/: api-reference.md  bantu_language_adaptation.md  chomsky-mathematical-proofs.md  climate_monitoring.md  computational-processing.md  contributing.md  examples.md  formal-language-theory.md  getting-started.md  glossary.md  index.md  language-model-tutorial.md  machine-verification.md  nlp-verification-methods.md  recursive-language-overview.md  size-comparison.md  space_exploration_adaptation.md  the-recursive-story.md  walkthrough.md
evaluation_results/: detailed_2025-07-26_12-51-24.json  holdout_test_sets.json  (+1 more)
nasa_demo/: README.md  (+2 more)
rust-core/: Cargo.toml
(+5 files in other folders)
