[package]
name = "atomic-lang-model"
version = "0.1.0"
edition = "2021"
authors = ["Atomic Language Model Team"]
description = "High-performance atomic language model implementation in Rust"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
rayon = "1.10"
crossbeam = "0.8"
rwlock = "0.8"
once_cell = "1.20"

# Data structures
dashmap = "6.1"
indexmap = "2.6"
smallvec = "1.13"
bitvec = "1.0"
arrayvec = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Memory mapping and zero-copy
memmap2 = "0.9"
zerocopy = "0.8"
bytemuck = "1.20"

# SIMD operations
packed_simd_2 = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Performance profiling
profiling = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
quickcheck = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[[bench]]
name = "atomic_processing"
harness = false

[[bench]]
name = "language_model"
harness = false